2014-09-24  Holger Seelig  <holger.seelig@yahoo.de>

	* GridTool.cpp: 

2014-09-24  Holger Seelig  <holger.seelig@yahoo.de>

	* GridTool.h:
	* Palette.x3dv:
	* GridTool.cpp:
	* GridEditor.xml:
	* X3DGridEditor.h:
	* X3DGridEditor.cpp:
	* X3DGridEditorInterface.h:
	* X3DGridEditorInterface.cpp: 

2014-09-24  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* X3DBrowserEditor.h:
	* X3DBrowserEditor.cpp:
	* GridTool.h:
	* Palette.x3dv:
	* GridTool.cpp: 

2014-09-24  Holger Seelig  <holger.seelig@yahoo.de>

	* Palette.x3dv:
	* GridTool.h:
	* GridEditor.xml:
	* GridTool.cpp:
	* X3DGridEditor.h:
	* X3DGridEditor.cpp:
	* X3DGridEditorInterface.h:
	* X3DGridEditorInterface.cpp: 

2014-09-23  Holger Seelig  <holger.seelig@yahoo.de>

	* Palette.x3dv: 

2014-09-23  Holger Seelig  <holger.seelig@yahoo.de>

	* GridTool.h:
	* Palette.x3dv:
	* GridTool.cpp:
	* GridEditor.xml:
	* X3DGridEditor.h:
	* X3DGridEditor.cpp:
	* X3DGridEditorInterface.h:
	* X3DGridEditorInterface.cpp: 

2014-09-23  Holger Seelig  <holger.seelig@yahoo.de>

	* AboutTab.cpp:
	* GridTool.h:
	* Palette.x3dv:
	* GridTool.cpp:
	* GridEditor.xml:
	* X3DGridEditor.h:
	* SFColorRGBAButton.h:
	* X3DGridEditor.cpp:
	* X3DGridEditorInterface.h:
	* X3DGridEditorInterface.cpp: 

2014-09-23  Holger Seelig  <holger.seelig@yahoo.de>

	* GridTool.h:
	* Palette.x3dv:
	* GridTool.cpp:
	* GridEditor.xml:
	* X3DGridEditor.h:
	* X3DGridEditor.cpp:
	* X3DGridEditorInterface.h:
	* X3DGridEditorInterface.cpp: 

2014-09-22  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* Makefile.am:
	* MagicImport.cpp:
	* X3DBaseInterface.h:
	* BrowserWindow.h:
	* BrowserWindow.cpp:
	* X3DBrowserWindow.h:
	* X3DBrowserEditor.h:
	* X3DBrowserWindow.cpp:
	* X3DBrowserWidget.cpp:
	* X3DBrowserEditor.cpp:
	* GridTool.h:
	* Palette.x3dv:
	* GridEditor.xml:
	* GridTool.cpp:
	* X3DGridEditor.cpp: 

2014-09-22  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBaseInterface.h:
	* X3DBaseInterface.cpp: