@@ -98,7 +98,6 @@ GridTool::isEnabled (const bool value, const bool metadata)
 
 	if (metadata)
 	{
-__LOG__ << std::endl;
 		getWorldInfo (true) -> setMetaData <bool> ("/Titania/GridTool/enabled", enabled);
 		getBrowserWindow () -> isModified (getBrowser (), true);
 	}
@@ -269,7 +268,6 @@ GridTool::configure ()
 void
 GridTool::set_translation ()
 {
-__LOG__ << std::endl;
 	getWorldInfo (true) -> setMetaData <X3D::Vector3f> ("/Titania/GridTool/translation", getTool () -> translation ());
 	getBrowserWindow () -> isModified (getBrowser (), true);
 }
@@ -277,7 +275,6 @@ __LOG__ << std::endl;
 void
 GridTool::set_rotation ()
 {
-__LOG__ << std::endl;
 	getWorldInfo (true) -> setMetaData <X3D::Rotation4f> ("/Titania/GridTool/rotation", getTool () -> rotation ());
 	getBrowserWindow () -> isModified (getBrowser (), true);
 }
@@ -285,7 +282,6 @@ __LOG__ << std::endl;
 void
 GridTool::set_dimension ()
 {
-__LOG__ << std::endl;
 	getWorldInfo (true) -> setMetaData ("/Titania/GridTool/dimension", getTool () -> dimension ());
 	getBrowserWindow () -> isModified (getBrowser (), true);
 }
@@ -293,7 +289,6 @@ __LOG__ << std::endl;
 void
 GridTool::set_spacing ()
 {
-__LOG__ << std::endl;
 	getWorldInfo (true) -> setMetaData ("/Titania/GridTool/spacing", getTool () -> spacing ());
 	getBrowserWindow () -> isModified (getBrowser (), true);
 }
@@ -301,7 +296,6 @@ __LOG__ << std::endl;
 void
 GridTool::set_majorLineEvery ()
 {
-__LOG__ << std::endl;
 	getWorldInfo (true) -> setMetaData ("/Titania/GridTool/majorLineEvery", getTool () -> majorLineEvery ());
 	getBrowserWindow () -> isModified (getBrowser (), true);
 }
@@ -316,7 +310,6 @@ GridTool::set_color ()
 void
 GridTool::set_lineColor ()
 {
-__LOG__ << std::endl;
 	getWorldInfo (true) -> setMetaData <X3D::Color4f> ("/Titania/GridTool/lineColor", getTool () -> lineColor ());
 	getBrowserWindow () -> isModified (getBrowser (), true);
 }
@@ -324,7 +317,6 @@ __LOG__ << std::endl;
 void
 GridTool::set_majorLineColor ()
 {
-__LOG__ << std::endl;
 	getWorldInfo (true) -> setMetaData <X3D::Color4f> ("/Titania/GridTool/majorLineColor", getTool () -> majorLineColor ());
 	getBrowserWindow () -> isModified (getBrowser (), true);
 }
