@@ -4,6 +4,10 @@
 
 2014-09-24  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* GridTool.cpp: 
+
+2014-09-24  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* GridTool.h:
 	* Palette.x3dv:
 	* GridTool.cpp:
